Fixed globe overlap on title

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -152,7 +152,7 @@ a.mapboxgl-ctrl-logo {
 
 .home-search-text h2 {
   position: relative;
-  top: 70px;
+  top: 40px;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 28px;
@@ -199,7 +199,7 @@ a.mapboxgl-ctrl-logo {
 
 .home-pan {
   position: relative;
-  bottom: -100px;
+  bottom: -115px;
   right: 18px;
   display: flex;
   justify-content: space-between;
